spring-cloud-kubernetes-integration-tests/fabric8-client-configmap-polling-and-import-reload/src/test/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fabric8-client-configmap-deployment-polling-and-import-reload
spec:
  selector:
    matchLabels:
      app: fabric8-client-configmap-polling-and-import-reload
  template:
    metadata:
      labels:
        app: fabric8-client-configmap-polling-and-import-reload
    spec:
      serviceAccountName: spring-cloud-kubernetes-serviceaccount
      containers:
        - name: fabric8-client-configmap-polling-and-import-reload
          image: docker.io/springcloud/fabric8-client-configmap-polling-and-import-reload
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
          ports:
            - containerPort: 8080
