spring-cloud-kubernetes-integration-tests/fabric8-client-configmap-polling-and-import-reload/src/test/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fabric8-client-configmap-polling-and-import-reload
  name: fabric8-client-configmap-polling-and-import-reload
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: fabric8-client-configmap-polling-and-import-reload
  type: ClusterIP
